[project]
name = "qwen-image-layered"
version = "0.1.0"
description = "Layered Decomposition for Inherent Editablity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers",
    "gradio>=6.2.0",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "python-pptx>=1.0.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
